2022-06-14  Matteo Corti  <matteo@corti.li>

        * test/unit_tests.sh (setUp): printing the test number

        * check_ssl_cert (main): fixed a problem with the caching of IPv6 hosts

2022-06-11  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert: fixed a problem with Prometheus output

2022-06-03  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): X.509 version printed with --info

2022-06-01  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (check_cert_end_date): Applied patch for the missing quotes to the prometheus output

2022-05-27  Matteo Corti  <matteo@corti.li>

        * test/unit_tests.sh: Added the possibility to set the debug mode for all the tests

2022-05-26  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): added default ports for XMPP

2022-05-25  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (parse_command_line_options): Support for DTLS
        * check_ssl_cert (parse_command_line_options): Check if two protocols are specified at the same time

2022-05-10  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert.completion (_check_ssl_cert): added the missing --check-ssl-labs option

2022-05-05  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): using nmap instead of netcat

2022-05-04  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Using netcat to check connections

2022-04-28  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Using --script +ssl-enum-ciphers for older versions of nmap

2022-04-26  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (check_ocsp): Updating the timeout when using the timeout option of 'ocsp'

2022-04-25  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (check_ocsp): Better error message in case of OCSP problems

2022-04-13  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Allows to run with the --init-host-cache option only