@@ -1,3 +1,7 @@
+2022-06-15  Matteo Corti  <matteo@corti.li>
+
+        * test/unit_tests.sh (setUp): test completion time estimation
+
 2022-06-14  Matteo Corti  <matteo@corti.li>
 
         * test/unit_tests.sh (setUp): printing the test number
